# basic-python-template

./: README.md  cookiecutter.json
{{cookiecutter.project_slug}}/: .editorconfig  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  mkdocs.yml  noxfile.py  pyproject.toml
{{cookiecutter.project_slug}}/.github/workflows/: docker-publish.yml  pages.yml  python.yml
{{cookiecutter.project_slug}}/docs/: index.md
{{cookiecutter.project_slug}}/src/{{cookiecutter.module_name}}/: __init__.py
{{cookiecutter.project_slug}}/tests/: test_example.py
